# MS-Rewards-Farmer

./: .dockerignore  .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  Dockerfile  MS_reward.bat  MsReward.ps1  README.md  ROADMAP.md  config.yaml  docker-compose.yml  docker.sh  generate_task_xml.py  main.py  pyproject.toml  register_task.ps1  release-please-config.json  requirements-dev.txt  requirements.txt  run.ps1
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: dependency-review.yml  release-please.yml
localized_activities/: en.py  es.py  fr.py  it.py
src/: __init__.py  activities.py  bonusPoints.py  browser.py  loggingColoredFormatter.py  login.py  punchCards.py  readToEarn.py  remainingSearches.py  searches.py  userAgentGenerator.py  utils.py
test/: test_browser.py  test_main.py  test_utils.py
